apps/base/actual-budget/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: actual-budget
    labels:
        toolkit.fluxcd.io/tenant: sys
