apps/base/actual-budget/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: actual-budget
    namespace: actual-budget
spec:
    type: ClusterIP
    selector:
        app: actual-budget
    ports:
        - name: webui
          port: 5006
          protocol: TCP
