apps/base/actual-budget/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: actual-budget-ingress
    namespace: actual-budget
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`budget.guibi.dev`)
          kind: Rule
          services:
              - name: actual-budget
                namespace: actual-budget
                port: 5006
                scheme: http
    tls:
        secretName: tls-certificate
